# helpful.computer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  next.conf.mjs  package-lock.json  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
__tests__/: AudioVisualizer.test.tsx  InteractiveCanvas.test.tsx  generateEphemeralKey.test.ts
app/: layout.tsx  page.tsx
app/components/: Dashboard.tsx  HomeUI.tsx  ToggleListeningButton.tsx
app/hooks/: useCanvasStateTool.test.tsx  useCanvasStateTool.ts  useCanvasTool.ts  useCanvasTools.test.tsx  useCanvasTools.ts  useRealtime.ts
app/lib/: excalidrawStore.ts  generateEphemeralKey.test.ts  generateEphemeralKey.ts  prompts.ts
components/: Dashboard.tsx
components/browser/: BrowserView.tsx
components/canvas/: InteractiveCanvas.tsx
components/computer/: ComputerView.tsx
components/context/: AppContext.test.tsx  AppContext.tsx  ExcalidrawContext.tsx
components/dashboard/: Dashboard.tsx  OpenAiKeyDialog.tsx  ToolLog.test.tsx  ToolLog.tsx
components/desktop/: DesktopPanel.test.tsx  DesktopPanel.tsx
components/excalidraw/: ExcalidrawCanvas.tsx  ExcalidrawContext.tsx  ExcalidrawView.tsx  ExcalidrawWrapper.tsx
components/icons/: KeyIcon.tsx  KeyboardIcon.tsx  MicIcon.tsx  MicOffIcon.tsx  MicOnIcon.tsx
components/lexical/: LexicalCanvas.tsx  LexicalView.tsx
components/settings/: SettingsView.test.tsx  SettingsView.tsx
components/speech/: AudioVisualizer.test.tsx  AudioVisualizer.tsx  TextInput.tsx  ToggleListeningButton.tsx
components/strudel/: StrudelCanvas.tsx  StrudelContext.tsx
hooks/: useBrowserTools.ts  useBrowsingTools.ts  useCanvasTool.ts  useComputingTools.ts  useDesktopTools.test.ts  useDesktopTools.ts  useDrawingTools.ts  useExcalidrawTool.ts  useExcalidrawTools.ts  useLexicalTools.ts  useOrchestratorAgent.ts  useRealtime.ts  useRealtimeAgent.ts  useStrudelTools.test.tsx  useStrudelTools.ts  useWritingTools.ts
lib/: browser.ts  getToken.test.ts  getToken.ts  manageOpenAIKey.ts  manageOpenaiKey.ts  models.ts  openAiKey.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cua.rs  lib.rs  main.rs  view.rs
(+18 files in other folders)
