[package]
name = "helpful-computer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helpful_computer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-stronghold = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
base64 = "0.22.1"
enigo = "0.5.0"
xcap = "0.6.2"
tokio = { version = "1.0", features = ["time"] }
argon2 = { package = "rust-argon2", version = "3.0.0" }

